[feat] creation of some handler functions and swagger documentation added within /docs
